--- a/LP/lp1/index.html
+++ b/LP/lp1/index.html
@@ -285,17 +285,17 @@
     <h3>選ばれる3つの理由</h3>
     <div class="feature-grid">
       <div class="feature">
-        <img src="images/image01.jpg" alt="サロンの様子">
+        <img src="images/image03.webp" alt="サロンの様子">
         <h4>1. 丁寧なカウンセリング</h4>
         <p>肌悩みや生活習慣をヒアリングし、あなたに合った施術プランをご提案します。</p>
       </div>
       <div class="feature">
-        <img src="https://images.unsplash.com/photo-1600180758890-6a1e39a3a4c1?auto=format&fit=crop&w=800&q=80" alt="">
+        <img src="images/image02.webp" alt="">
         <h4>2. 高品質なオーガニック化粧品</h4>
         <p>低刺激で肌に優しい製品を使用。敏感肌の方も安心してご利用いただけます。</p>
       </div>
       <div class="feature">
-        <img src="https://images.unsplash.com/photo-1611078489935-0cb6a7aa66b5?auto=format&fit=crop&w=800&q=80" alt="">
+        <img src="images/image04.webp" alt="">
         <h4>3. 経験豊富なエステティシャン</h4>
         <p>10年以上の経験を持つスタッフが、一人ひとりに丁寧に施術いたします。</p>
       </div>
