--- a/index.html
+++ b/index.html
@@ -152,6 +152,28 @@
   <div class="works-grid" style="display:flex; flex-direction:column; gap:40px; max-width:1000px; margin:0 auto;">
 
     <!-- LPサンプルカード -->
+<article class="works-card"
+  style="display:flex; flex-wrap:wrap; background:white; border-radius:12px; overflow:hidden; box-shadow:0 6px 16px rgba(0,0,0,0.08);">
+  <!-- 左：LPプレビュー -->
+  <div class="works-image" style="flex:1 1 300px; min-width:300px;">
+    <a href="lp/lp2/index.html" target="_blank">
+      <iframe src="lp/lp2/index.html" width="100%" height="120%" style="border:none;"></iframe>
+    </a>
+  </div>
+  <!-- 右：説明 -->
+  <div class="works-info"
+    style="flex:1 1 300px; padding:24px; display:flex; flex-direction:column; justify-content:center;">
+    <h4 style="margin-bottom:12px; font-size:1.3rem;">オンライン英会話 LP</h4>
+    <ul style="margin-bottom:16px; color:#555; padding-left:1.2em;">
+      <li>外資系・ビジネスパーソン向けに「信頼感・集中・プロフェッショナルさ」を軸にデザイン</li>
+      <li>ダークトーンとガラス調カードで高級感を演出しつつ、情報の優先度が分かる構成</li>
+      <li>Hero→特徴→カリキュラム→受講者の声→料金→FAQと、検討プロセスに沿って申込み導線へ誘導</li>
+    </ul>
+    <a href="lp/lp2/index.html" target="_blank" class="works-btn">詳細はこちら</a>
+  </div>
+</article>
+
+    <!-- LPサンプルカード -->
     <article class="works-card"
       style="display:flex; flex-wrap:wrap; background:white; border-radius:12px; overflow:hidden; box-shadow:0 6px 16px rgba(0,0,0,0.08);">
       <!-- 左：画像 -->
@@ -174,21 +196,8 @@
       </div>
     </article>
 
-    <article class="works-card"
-      style="display:flex; flex-wrap:wrap; background:white; border-radius:12px; overflow:hidden; box-shadow:0 6px 16px rgba(0,0,0,0.08);">
-      <div class="works-image" style="flex:1 1 300px; min-width:300px;">
-        <a href="lp/lp2/index.html" target="_blank">
-          <img src="https://images.unsplash.com/photo-1611078489935-0cb6a7aa66b5?auto=format&fit=crop&w=800&q=80"
-            alt="オンライン英会話 LP" style="width:100%; height:100%; object-fit:cover;">
-        </a>
-      </div>
-      <div class="works-info"
-        style="flex:1 1 300px; padding:24px; display:flex; flex-direction:column; justify-content:center;">
-        <h4 style="margin-bottom:12px; font-size:1.3rem;">オンライン英会話 LP</h4>
-        <p style="margin-bottom:16px; color:#555;">ライティング・構成・HTML制作を担当。ユーザー目線で分かりやすく整理しています。</p>
-        <a href="lp/lp1/index.html" target="_blank" class="works-btn">詳細はこちら</a>
-      </div>
-    </article>
+
+
 
   </div>
 </section>
