リンク修正

--- a/index.html
+++ b/index.html
@@ -750,10 +750,10 @@ a {
         <!-- Work Card 1 -->
         <article class="works-card">
           <div class="works-image">
-            <a href="lp/lp1/index.html" target="_blank">
-              <img src="images/lp01.PNG" class="preview-img" alt="美容サロン LP">
+            <a href="lp/lp2/index.html" target="_blank">
+              <img src="images/lp02.PNG" class="preview-img" alt="英会話レッスン LP">
               <div class="preview-hover">
-                <img src="images/lp01.PNG" alt="美容LP詳細" target="_blank">
+                <img src="images/lp02.PNG" alt="英会話レッスンLP詳細" target="_blank">
               </div>
             </a>
             <img src="images/logo.svg" class="work-logo" >
