--- a/lp/lp2/index.html
+++ b/lp/lp2/index.html
@@ -541,7 +541,7 @@
       </section>
 
       <footer>
-         <div>Executive English — 意識の高いビジネスマンのための英会話スクール</div>
+         <div>Executive English — ハイキャリアビジネスマン向けの英会話スクール</div>
          <div style="margin-top:6px">会社名: 株式会社Executive English / お問い合わせ: info@example.com</div>
       </footer>
    </div>
